fix get tweet api as a offset/limit pagination cuz its actuall implemtation is not cursor-based
